Grace/tests/gibbs/errors/t054.grace
// ERROR = P1034
type = {}
